Refactor file creation to use writer.println -> make sure to preserve cross OS compatibility